--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </button>
                 <div class="collapse navbar-collapse barra__menuitems" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a href="/ProyectoRopa/index.html" style="color: black;">Inicio</a>
+                        <a href="./index.html" style="color: black;">Inicio</a>
                         <a href="./pages/quienes-somos.html" style="color: black;">Historia</a>
                         <a href="./pages/productos.html" style="color: black;">Productos</a>
                         <a href="./pages/promociones.html" style="color: black;">Promociones</a>
@@ -55,38 +55,42 @@
             </div>
         </nav>
         <div class="banner banner--index">
-            <p class="animate__animated animate__fadeInLeft">Tu remera es Dony</p>
+            <p class="animate__animated animate__fadeInLeft" style="color: black;">Tu remera es Dony</p>
         </div>
         <main class="main">
+           
+            <div class="que-es-dony">
+                <h3 class="title-primary">¿Que es Dony?</h3>
+                <article class="que-es-dony__card">
+                    <img style="width: 12%; height: 7%;" src="./assets/logo.jpg" alt="Logo de Dony">
+                    <p>En Dony, nos especializamos en ofrecer remeras de diseño exclusivo y personalizadas de alta calidad a un excelente precio. Nuestra misión es proporcionar productos únicos que permitan a nuestros clientes expresar su estilo personal y sentirse especiales en cada ocasión.</p>
+                </article>
+            </div>
+
+
             <h2 class="title-primary">Productos Principales</h2>
             <section class="productos__collection">
                 <article class="productos__collection__card">
                     <img src="./assets/productos_remera4.jpg" alt="ProductoPrincipalRemera">
-                    <p>Disfruta de nuestra <mark>ropa</mark> seleccionadas de las mejores regiones del mundo. Desde una camisa de salir fuerte hasta una remera fachera. </p>
+                    <p>Disfruta de nuestros diseños exclusivos de remeras. </p>
                 </article>
                 <article class="productos__collection__card">
                     <img src="./assets/productos_remera7.jpg" alt="ProductoPrincipalRemera">
-                    <p>Relájate con nuestra variedad de <mark>Remeras</mark>, desde lo más clasico hasta lo moderno. ¡Ven y contactanos!</p>
+                    <p> Creaciones desde lo más clasico hasta lo moderno. </p>
                 </article>
                 <article class="productos__collection__card">
                     <img src="./assets/prodcutos_remera1.jpg" alt="ProductoPrincipalRemera">
-                    <p> Refrescate de nuestros futuros <mark>perfumes con conjunto de remeras</mark></p>
+                    <p> Para todas las edades y tamaños. </mark></p>
                 </article>
             </section>
         </main>
-        <div class="que-es-dony">
-            <h3 class="title-primary">¿Que es Dony?</h3>
-            <article class="que-es-dony__card">
-                <img style="width: 12%; height: 7%;" src="./assets/logo.jpg" alt="Logo de Dony">
-                <p>En Dony, nos especializamos en ofrecer remeras y perfumes personalizados de alta calidad a precios accesibles. Nuestra misión es proporcionar productos únicos y asequibles que permitan a nuestros clientes expresar su estilo personal y sentirse especiales en cada ocasión.</p>
-            </article>
-        </div>
-        <div class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
+        
+        <div style="background-color: greenyellow;" class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
             <h3 class="title-primary">¡Mira nuestro futuro producto!</h3>
             <div class="perfume__collection">
-                <img src="./assets/perfume.png" alt="Futuro Perfume" class="perfume__image">
+                <img src="./assets/Buso.png" alt="Futuro Perfume" class="perfume__image">
                 <div class="perfume_collection__items">
-                    <p>Mira, este es nuestro futuro producto. Un perfume de la más alta calidad. Aun no salio a la venta pero si quieres estar informado puedes segurinos en instagram. </p>
+                    <p><strong>El mes que viene lanzamos los canguros con diseños exclusivos, con una amplia gama de colores y talles. Ya podes ir pensando el tuyo! </strong></p>
                 </div>
             </div>
         </div>
@@ -96,9 +100,11 @@
                 <img src="./assets/logo.jpg" alt="Logo de Dony" class="pie__logo-img">
                 <p>Dony</p>
             </section>
-            <section>Derechos Reservados || Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
+            <section>Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
             <section class="pie__redessociales">    
-                <img src="./assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">               
+                <img src="./assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">
+                <img src="./assets/whatsapp.webp" alt="Logo de WhatsAPP" class="pie__redessociales_logo" style="width: 110px;">
+                <img src="./assets/facebook.png" alt="Logo de Facebook" class="pie__redessociales_logo">                
             </section>
         </footer>
     </div>    
