--- a/pages/productos.html
+++ b/pages/productos.html
@@ -57,7 +57,8 @@
       <p class="animate__animated animate__fadeInLeft">Tu remera es dony</p>
     </div>
     <main class="nuestros-productos">
-      <h2 class="title-primary">Nuestros Productos</h2>
+      <h2 class="title-primary">Nuestros Productos </h2>
+      <h4 class="title-primary">Talles XS, S, M, L, XL, XXL</h4>
       <section class="nuestros-productos__collection">
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/prodcutos_remera1.jpg" class="card-img-top" alt="Remera Perzonalizada">
@@ -74,13 +75,13 @@
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/productos_remera3.jpg" class="card-img-top" alt="Remera Perzonalizada">
           <div class="card-body">
-            <p class="card-text">Remera Perzonalizada - 750$</p>
+            <p class="card-text">Remera Perzonalizada - 720$</p>
           </div>
         </div>
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/productos_remera4.jpg" class="card-img-top" alt="Remera Perzonalizada">
           <div class="card-body">
-            <p class="card-text">Remera Perzonalizada - 750$</p>
+            <p class="card-text">Remera Perzonalizada - 775$</p>
           </div>
         </div>
         <div class="card nuestros-productos__collection__item">
@@ -93,13 +94,13 @@
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/productos_remera7.jpg" class="card-img-top" alt="Remera Perzonalizada">
           <div class="card-body">
-            <p class="card-text">Remera Perzonalizada - 750$</p>
+            <p class="card-text">Remera Perzonalizada - 780$</p>
           </div>
         </div>
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/productos_remera8.jpg" class="card-img-top" alt="Remera Perzonalizada">
           <div class="card-body">
-            <p class="card-text">Remera Perzonalizada - 750$</p>
+            <p class="card-text">Remera Perzonalizada - 720$</p>
           </div>
         </div>
         <div class="card nuestros-productos__collection__item">
@@ -117,17 +118,17 @@
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/productos_remera11.jpg" class="card-img-top" alt="Remera Perzonalizada">
           <div class="card-body">
-            <p class="card-text">Remera Perzonalizada - 750$</p>
+            <p class="card-text">Remera Perzonalizada - 775$</p>
           </div>
         </div>
       </section>
     </main>
-    <div class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
+    <div style="background-color: rgb(187, 187, 11);" class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
       <h3 class="title-primary">¡Mira nuestro futuro producto!</h3>
       <div class="perfume__collection">
-          <img src="../assets/perfume.png" alt="Futuro Perfume" class="perfume__image">
+          <img src="../assets/Buso.png" alt="Futuro Perfume" class="perfume__image">
           <div class="perfume_collection__items">
-              <p>Mira, este es nuestro futuro producto. Un perfume de la más alta calidad. Aun no salio a la venta pero si quieres estar informado puedes segurinos en instagram. </p>
+              <p><strong>El mes que viene lanzamos los canguros con diseños exclusivos, con una amplia gama de colores y talles. Ya podes ir pensando el tuyo! </strong></p>
           </div>
       </div>
   </div>
@@ -137,10 +138,12 @@
           <img src="../assets/logo.jpg" alt="Logo de Dony." class="pie__logo-img">
           <p>Dony</p>
       </section>
-      <section>Derechos Reservados || Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
+      <section>Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
       <section class="pie__redessociales">    
-          <img src="../assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">              
-      </section>
+        <img src="../assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">
+        <img src="../assets/whatsapp.webp" alt="Logo de WhatsAPP" class="pie__redessociales_logo" style="width: 110px;">
+        <img src="../assets/facebook.png" alt="Logo de Facebook" class="pie__redessociales_logo">                
+    </section>
   </footer>
   </div>    
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
