--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -54,15 +54,15 @@
       </div>
     </nav>
     <div class="banner banner--promociones">
-      <p class="animate__animated animate__fadeInLeft">Tu remera es dony</p>
+      <p class="animate__animated animate__fadeInLeft" style="color: black;">Tu remera es dony</p>
     </div>
     <main class="nuestros-productos">
-      <h2 class="title-primary">Nuestras actuales Promociones</h2>
+      <h2 class="title-primary">Promociones en Agosto</h2>
       <section class="nuestros-productos__collection">
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/2x1.png" class="card-img-top" alt="2x1 - Promocion - Imagen">
           <div class="card-body">
-            <p class="card-text">2X1 en remeras recientes.</p>
+            <p class="card-text">2X1 en remeras con el mismo diseño.</p>
           </div>
         </div>
         <div class="card nuestros-productos__collection__item">
@@ -74,18 +74,18 @@
         <div class="card nuestros-productos__collection__item">
           <img src="../assets/nomo.png" class="card-img-top" alt="Nomo de Nieve - Imagen">
           <div class="card-body">
-            <p class="card-text">¡5% de descuento por invierno!</p>
+            <p class="card-text">5% de descuento contado</p>
           </div>
         </div>
         
       </section>
     </main>
-    <div class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
+    <div style="background-color: rgb(187, 187, 11);" class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
       <h3 class="title-primary">¡Mira nuestro futuro producto!</h3>
       <div class="perfume__collection">
-          <img src="../assets/perfume.png" alt="Futuro Perfume" class="perfume__image">
+          <img src="../assets/Buso.png" alt="Futuro Perfume" class="perfume__image">
           <div class="perfume_collection__items">
-              <p>Mira, este es nuestro futuro producto. Un perfume de la más alta calidad. Aun no salio a la venta pero si quieres estar informado puedes segurinos en instagram. </p>
+              <p><strong>El mes que viene lanzamos los canguros con diseños exclusivos, con una amplia gama de colores y talles. Ya podes ir pensando el tuyo! </strong></p>
           </div>
       </div>
   </div>
@@ -95,9 +95,11 @@
           <img src="../assets/logo.jpg" alt="Logo de Dony." class="pie__logo-img">
           <p>Dony</p>
       </section>
-      <section>Derechos Reservados || Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
+      <section>Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
       <section class="pie__redessociales">    
-          <img src="../assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">                
+          <img src="../assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">
+          <img src="../assets/whatsapp.webp" style="width: 110px;">
+          <img src="../assets/facebook.png" alt="Logo de Facebook" class="pie__redessociales_logo">                
       </section>
   </footer>
   </div>    
