--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -59,20 +59,20 @@
             <section class="historia__collection">
                 <article class="historia__collection_card">
                     <img src="../assets/remera_hombre.jpg" alt="Un hombre con una remera puesta de Dony.">
-                    <p>Dony nacio en Uruguay, empezando a tener una tienda online con ropa perzonalizada. Todo esto en el 2022, a medida que pasaba el tiempo la calidad subia y cada vez se vendia más.</p>
+                    <p>Dony nacio en el año 2021 en Montevideo, Uruguay bajo la idea de un grupo de amigos que decidieron hacer remeras para un evento especial. Nos pregutnaron de donde eran esas espectaculares remeras. </p>
                 </article>
                 <article class="historia__collection_card--two">
-                    <p>Hoy en día es una marca de ropa que mucha gente compra, todo tipo de remeras. Y proximamente...Perfumes.</p>
+                    <p>De ahi en mas, decidimos hacer una tienda on line y continuar promoviendo productos con diseño exclusivo. Hoy en día, tenemos un gran camino recorrido y una marca conocida y ya pensamos adicionar nuevos productos.</p>
                     <img src="../assets/logo.jpg" alt="Logo de Dony">
                 </article>
             </section>
         </main>
-        <div class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
+        <div style="background-color: rgb(187, 187, 11);" class="perfume" data-aos="flip-up" data-aos-duration="1300" data-aos-once="true">
             <h3 class="title-primary">¡Mira nuestro futuro producto!</h3>
             <div class="perfume__collection">
-                <img src="../assets/perfume.png" alt="Futuro Perfume" class="perfume__image">
+                <img src="../assets/Buso.png" alt="Futuro Perfume" class="perfume__image">
                 <div class="perfume_collection__items">
-                    <p>Mira, este es nuestro futuro producto. Un perfume de la más alta calidad. Aun no salio a la venta pero si quieres estar informado puedes segurinos en instagram. </p>
+                    <p><strong>El mes que viene lanzamos los canguros con diseños exclusivos, con una amplia gama de colores y talles. Ya podes ir pensando el tuyo! </strong></p>
                 </div>
             </div>
         </div>
@@ -82,10 +82,11 @@
                 <img src="../assets/logo.jpg" alt="Logo de Dony" class="pie__logo-img">
                 <p>Dony</p>
             </section>
-            <section>Creado por Nicolas Blasiak || nicolasblasiakp@gmail.com</section>
-            <section class="pie__redessociales">
-      
-                <img src="../assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">           
+            <section>Creado por: Nicolas - nicolasblasiakp@gmail.com</section>
+            <section class="pie__redessociales">    
+                <img src="../assets/instagram.png" alt="Logo de Instagram" class="pie__redessociales_logo">
+                <img src="../assets/whatsapp.webp" style="width: 110px;">
+                <img src="../assets/facebook.png" alt="Logo de Facebook" class="pie__redessociales_logo">                
             </section>
         </footer>
     </div>    
